force-app/main/default/objects/Report_Setting__c/Report_Setting__c.object-meta.xml
<CustomObject>
    <label>Report Setting</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>