force-app/main/default/objects/Report_Setting__c/fields/Display_For__c.field-meta.xml
<CustomField>
    <fullName>Display_For__c</fullName>
    <label>Display For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Display_For</valueSetName>
    </valueSet>
</CustomField>