force-app/main/default/objects/Report_Setting__c/fields/Sequences_Display__c.field-meta.xml
<CustomField>
    <fullName>Sequences_Display__c</fullName>
    <label>Sequences Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>